objects/Bank_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Bank Statement</relationshipLabel>
        <relationshipName>Bank_Statement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Bank Statement</relationshipLabel>
        <relationshipName>Bank_Statement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Statement</label>
    <nameField>
        <displayFormat>BS-{0000000000}</displayFormat>
        <label>Bank Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>